# modbus_sniffer

./: .gitignore  README.md  coverage.json  main.py  modbus-sniffer.spec  modbus_sniffer.spec  pyproject.toml  smoke_test_EXE.sh
scripts/: function_coverage_report.py  live_print_fc3.py  modbus_watch.py  replay_print_fc3.py
src/: app_logging.py  config.py
src/capture/: base.py  live_capture.py  live_capture.py.bkup  pcap_replay.py
src/cli/: modbus_watch.py
src/modbus/: coils.py  constants.py  direction.py  field_finder.py  pdu.py  registers.py  utils.py
src/mqtt/: client.py
src/pipeline/: packet_handler.py
tests/: conftest.py  test_coils.py  test_constants.py
tests/integration/: test_replay_smoke.py
tests/pcaps/: sample.pcapng
tests/unit/: test_direction.py  test_modbus_watch_cli.py  test_mqtt_version.py  test_registers.py  test_session_logging.py  test_utils.py
tools/: analyze_toc.py
