[project]
name = "modbus-sniffer"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  # Pin to the minor series you validated; allows patch updates which are typically safe.
  "paho-mqtt>=2.1,<2.2",
  # ...other deps...
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["modbus", "mqtt", "capture", "pipeline"]

[project.scripts]
modbus-watch = "cli.modbus_watch:main"

[tool.pytest.ini_options]
# run everything except integration by default
# addopts = "-m 'not integration' -q"
markers = [
  "unit: fast, isolated tests",
  "integration: tests that require pcap/network/external tools"
]
