[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus-sniffer"
#version = "0.2.0"
version = ["version"]		# <- version comes from Git tags (ex. git tag -a v0.2.3 -m "Release 0.2.3")
description = "Utilities and helpers for parsing and testing Modbus traffic"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Matthew Allen" }]
license = { text = "MIT" }
# Keep runtime deps minimal; dev/test deps should live in requirements-dev.txt or tool configs
dependencies = [
  "paho-mqtt>=2.1,<2.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "coverage",
]

cli = [
  "pyshark",
]

[project.scripts]
modbus-watch = "cli.modbus_watch:main"

[tool.setuptools.packages.find]
where = ["src"]
# If you want to restrict which top-level packages get included, uncomment and list them:
# include = ["modbus*", "mqtt*", "capture*", "pipeline*", "cli*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
# addopts = "-m 'not integration' -q"
markers = [
  "unit: fast, isolated tests",
  "integration: tests that require pcap/network/external tools",
]

[tool.setuptools.package-data]
# If you have non-Python files within packages, list them here, e.g.:
# modbus = ["data/*.json", "data/*.yml", "py.typed"]

[tool.setuptools.exclude-package-data]
# modbus = ["**/*.pcap", "**/*.pcapng"]
